--- a/Notebook/path/ed-donner_agents/3_crew/2_financial_researcher/src/financial_researcher/config/agents.yaml
+++ b/Notebook/path/ed-donner_agents/3_crew/2_financial_researcher/src/financial_researcher/config/agents.yaml
@@ -1,7 +1,8 @@
 researcher:
 
+  # 「日本の」は英語でび出力を防止する為に追加
   role: >
-    {company} を対象としたシニア・ファイナンシャル・リサーチャー
+    {company} を対象とした日本のシニア・ファイナンシャル・リサーチャー
 
   goal: >
     {company} の企業、ニュース、可能性について調査する。
@@ -14,8 +15,9 @@ researcher:
 
 analyst:
 
+  # 「日本の」は英語でび出力を防止する為に追加
   role: >
-    {company}に特化した市場アナリストおよびレポート・ライター
+    {company}に特化した日本の市場アナリストおよびレポート・ライター
 
   goal: >
     企業{company}を分析し、明確かつ魅力的な方法で洞察を提示する包括的で構造化されたレポートを作成する。
