--- a/Notebook/path/ed-donner_agents/3_crew/2_financial_researcher/src/financial_researcher/config/tasks.yaml
+++ b/Notebook/path/ed-donner_agents/3_crew/2_financial_researcher/src/financial_researcher/config/tasks.yaml
@@ -31,7 +31,7 @@ analysis_task:
 
   agent: analyst
 
-  context: # analysis_task で research_taskの調査結果を参照できるようにする
-    - research_task
+  # context: # analysis_task で research_task の調査結果を参照できるようにする
+  #   - research_task
 
   output_file: output/report.md
