--- a/Notebook/path/ed-donner_agents/3_crew/2_financial_researcher/src/financial_researcher/config/agents.yaml
+++ b/Notebook/path/ed-donner_agents/3_crew/2_financial_researcher/src/financial_researcher/config/agents.yaml
@@ -1,6 +1,6 @@
 researcher:
 
-  # 「日本の」は英語でび出力を防止する為に追加
+  # 「日本の」は英語での出力を防止する為に追加
   role: >
     {company} を対象とした日本のシニア・ファイナンシャル・リサーチャー
 
@@ -15,7 +15,7 @@ researcher:
 
 analyst:
 
-  # 「日本の」は英語でび出力を防止する為に追加
+  # 「日本の」は英語での出力を防止する為に追加
   role: >
     {company}に特化した日本の市場アナリストおよびレポート・ライター
 
