--- a/Notebook/path/ed-donner_agents/3_crew/4_coder/src/coder/config/tasks.yaml
+++ b/Notebook/path/ed-donner_agents/3_crew/4_coder/src/coder/config/tasks.yaml
@@ -1,7 +1,7 @@
 coding_task:
   description: >
-    Write python code to achieve this: {assignment}
+    これを実現するための Python コードを記述します: {assignment}
   expected_output: >
-    A text file that includes the code itself, along with the output of the code.
+    コード自体とコードの出力が含まれるテキスト ファイル。
   agent: coder
   output_file: output/code_and_output.txt
